# historical-weather-pipeline

./: .gitignore  README.md  pyproject.toml  start_dashboard.ps1
dashboard/: app.py
sql/: gold_weather_summary.sql
src/de_portfolio_pipeline/: __init__.py  config.py
src/de_portfolio_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/de_portfolio_pipeline/models/: warehouse.py
src/de_portfolio_pipeline/pipelines/: ingest.py  transform.py
src/de_portfolio_pipeline/quality/: checks.py
src/de_portfolio_pipeline/utils/: inspect_db.py  run_pipeline.py
tests/: test_ingest.py  test_transform.py
